@@ -1,3 +1,7 @@
+2022-07-15
+
+  * Town and City phase upgrades are now FAST and free
+
 2022-07-04
 
   * release v0.26.1
